tests/baselines/reference/asiPublicPrivateProtected.errors.txt
error TS5107: Option 'alwaysStrict=false' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
asiPublicPrivateProtected.ts(1,1): error TS2304: Cannot find name 'public'.
asiPublicPrivateProtected.ts(12,1): error TS2304: Cannot find name 'private'.
asiPublicPrivateProtected.ts(23,1): error TS2304: Cannot find name 'protected'.


!!! error TS5107: Option 'alwaysStrict=false' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== asiPublicPrivateProtected.ts (3 errors) ====
    public
    ~~~~~~
!!! error TS2304: Cannot find name 'public'.
    class NonPublicClass {
        public s() {
        }
    }
    
    class NonPublicClass2 {
        public
        private nonPublicFunction() {
        }
    }
    private
    ~~~~~~~
!!! error TS2304: Cannot find name 'private'.
    class NonPrivateClass {
        private s() {
        }
    }
    
    class NonPrivateClass2 {
        private
        public nonPrivateFunction() {
        }
    }
    protected
    ~~~~~~~~~
!!! error TS2304: Cannot find name 'protected'.
    class NonProtectedClass {
      protected s() {
      }
    }
    
    class NonProtectedClass2 {
        protected
        public nonProtectedFunction() {
        }
    }
    
    class ClassWithThreeMembers {
        public
        private
        protected
    }
    